Node controls no longer overlap

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ button {
     width: 30px;
     height: 30px;
     padding: 0;
+    margin: 0 5px;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border: 0px solid rgb(255, 255, 255);
@@ -49,6 +50,13 @@ button {
 .node-control-pair {
     position: absolute;
     padding: 5px 0 0;
+}
+
+.node-text {
+    padding: 0;
+    margin: 0;
+    line-height: 1em;
+    text-align: center;
 }
 
 #add-layer-btn, #remove-layer-btn {
@@ -122,7 +130,7 @@ button {
     text-align: center;
 }
 
-#layer-text, .node-text {
+#layer-text {
     vertical-align: 6px;
     padding: 0 10px;
 }
@@ -138,6 +146,10 @@ button {
     display: table;
     width: 912px;
     z-index: 1;
+}
+
+#node-controls {
+    height: 25px;
 }
 
 #num-epochs {
